# winactions

./: IMPLEMENTATION.md  LICENSE  PERCEPTION_TIERS.md  PLAN_IMPLEMENTED.md  README.md  WINCTL_SKILL.md  pyproject.toml
skills/winctl/: SKILL.md
src/winactions/: __init__.py  _utils.py  config.py  models.py  targets.py
src/winactions/cli/: __init__.py  __main__.py  app.py  formatter.py  session.py  session_client.py  session_dispatch.py  session_server.py
src/winactions/command/: __init__.py  basic.py  executor.py  puppeteer.py
src/winactions/control/: __init__.py  controller.py  inspector.py
src/winactions/perception/: __init__.py  provider.py  state.py  structural_provider.py  vision_provider.py
src/winactions/screenshot/: __init__.py  photographer.py
tests/: test_cli_smoke.py  test_config.py  test_import.py  test_session_daemon.py  test_targets.py
tests/end2end/: E2E_ISSUES.md  e2e_run_20260218.md  test_steps.txt  test_steps_2.txt
